enchanting this with unbreaking
i don't have unbreaking II or unbreaking III i'm sorry

--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -1821,47 +1821,47 @@ function updateResets(){
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=0 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000){
     document.getElementById("prestigegain").innerText=" You will gain "+(((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)+" Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000)))+"k Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000))+"k Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000)))+"M Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000))+"M Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000)))+"B Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000))+"B Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000)))+"T Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000))+"T Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000)))+"Qa Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000))+"Qa Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000)))+"Qi Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000))+"Qi Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000)))+"Sx Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000))+"Sx Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000)))+"Sp Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000))+"Sp Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000)))+"Oc Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000))+"Oc Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000)))+"No Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000))+"No Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000)))+"Dc Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000))+"Dc Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000)))+"UDc Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000))+"UDc Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000000000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000)))+"DDc Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000))+"DDc Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000000000000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000000000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000)))+"TDc Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000))+"TDc Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000000000000000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000000000000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000000)))+"QaDc Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000000))+"QaDc Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000000000000000000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000000000000000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000000000)))+"QiDc Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000000000))+"QiDc Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000000000000000000000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000000000000000000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000000000000)))+"SxDc Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000000000000))+"SxDc Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000000000000000000000000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000000000000000000000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000000000000000)))+"SpDc Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000000000000000))+"SpDc Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000000000000000000000000000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000000000000000000000000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000000000000000000)))+"OcDc Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000000000000000000))+"OcDc Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000000000000000000000000000000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000000000000000000000000000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000000000000000000000)))+"NoDc Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000000000000000000000))+"NoDc Prestige Points."
     } else if ((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)>=1000000000000000000000000000000000000000000000000000000000000000 && (((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)<1000000000000000000000000000000000000000000000000000000000000000000){
-    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000000000000000000000000)))+"Vg Prestige Points."
+    document.getElementById("prestigegain").innerText=" You will gain "+(Math.trunc((((mpgain*(1+(goals4*0.25)))*prespwr)*chargeprestige)/1000000000000000000000000000000000000000000000000000000000000000))+"Vg Prestige Points."
     }
     document.getElementById("prestige").disabled=false
     document.getElementById("prestigeshop").innerText="Prestige shop"
@@ -1940,10 +1940,10 @@ function updateResets(){
     document.getElementById("ascendgain").innerText=" You gain no oily water."
     document.getElementById("ascend").disabled=true
     } else if ((((prespwr+1)*0.25)*chargesqueeze)==1 && charge==10000){
-    document.getElementById("ascendgain").innerText=" You gain "+(((prespwr+1)*0.25)*chargesqueeze)+" ml of oily water, using "+(10000*((((prespwr+1)*0.25)*chargesqueeze))+" watts."
+    document.getElementById("ascendgain").innerText=" You gain "+(((prespwr+1)*0.25)*chargesqueeze)+" ml of oily water, using "+(10000*((((prespwr+1)*0.25)*chargesqueeze)))+" watts."
     document.getElementById("ascend").disabled=false
     } else if ((((prespwr+1)*0.25)*chargesqueeze)>=1 && charge>=(10000*(((prespwr+1)*0.25)*chargesqueeze))) {
-    document.getElementById("ascendgain").innerText=" You gain "+(((prespwr+1)*0.25)*chargesqueeze)+" mls of oily water, using "+(10000*((((prespwr+1)*0.25)*chargesqueeze))+" watts."
+    document.getElementById("ascendgain").innerText=" You gain "+(((prespwr+1)*0.25)*chargesqueeze)+" mls of oily water, using "+(10000*((((prespwr+1)*0.25)*chargesqueeze)))+" watts."
     document.getElementById("ascend").disabled=false
     } else if (charge<(10000*((prespwr+1)*0.25))){
     affordamt=(((((prespwr+1)*0.25)*chargesqueeze)/charge).toFixed(0))
