--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -2329,6 +2329,71 @@ function updateLevelandAuto(){
         antipresses+=11111111111111
         totalantipresses+=11111111111111
         axppts+=(11111111111*(goals3+1))
+    } else if (pressesdec>=11111111111111 && pressesdec<111111111111111){
+    pressesdec-=11111111111111
+    if (dimension==0){
+        mxppts+=(11111111111111*mxpmul)
+        presses+=11111111111111
+        totalpresses+=11111111111111
+    } else if (dimension==1){
+        antipresses+=11111111111111
+        totalantipresses+=11111111111111
+        axppts+=(11111111111*(goals3+1))
+    }
+    } else if (pressesdec>=111111111111111 && pressesdec<1111111111111111){
+    pressesdec-=111111111111111
+    if (dimension==0){
+        mxppts+=(111111111111111*mxpmul)
+        presses+=111111111111111
+        totalpresses+=111111111111111
+    } else if (dimension==1){
+        antipresses+=111111111111111
+        totalantipresses+=111111111111111
+        axppts+=(111111111111*(goals3+1))
+    }
+    } else if (pressesdec>=1111111111111111 && pressesdec<11111111111111111){
+    pressesdec-=1111111111111111
+    if (dimension==0){
+        mxppts+=(1111111111111111*mxpmul)
+        presses+=1111111111111111
+        totalpresses+=1111111111111111
+    } else if (dimension==1){
+        antipresses+=1111111111111111
+        totalantipresses+=1111111111111111
+        axppts+=(1111111111111*(goals3+1))
+    }
+    } else if (pressesdec>=11111111111111111 && pressesdec<111111111111111111){
+    pressesdec-=11111111111111111
+    if (dimension==0){
+        mxppts+=(11111111111111111*mxpmul)
+        presses+=11111111111111111
+        totalpresses+=11111111111111111
+    } else if (dimension==1){
+        antipresses+=11111111111111111
+        totalantipresses+=11111111111111111
+        axppts+=(11111111111111*(goals3+1))
+    }
+    } else if (pressesdec>=111111111111111111 && pressesdec<1111111111111111111){
+    pressesdec-=111111111111111111
+    if (dimension==0){
+        mxppts+=(111111111111111111*mxpmul)
+        presses+=111111111111111111
+        totalpresses+=111111111111111111
+    } else if (dimension==1){
+        antipresses+=111111111111111111
+        totalantipresses+=111111111111111111
+        axppts+=(111111111111111*(goals3+1))
+    }
+    } else if (pressesdec>=1111111111111111111){
+    pressesdec-=1111111111111111111
+    if (dimension==0){
+        mxppts+=(1111111111111111111*mxpmul)
+        presses+=1111111111111111111
+        totalpresses+=1111111111111111111
+    } else if (dimension==1){
+        antipresses+=1111111111111111111
+        totalantipresses+=1111111111111111111
+        axppts+=(1111111111111111*(goals3+1))
     }
     }
     }
