--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -5323,7 +5323,7 @@ anonymityamt+=1
 ppoint=0
 mpgain=0
 ascpts=0
-anonymity+=(((again*(1+(goals4*0.25)))*prespwr)*chargeanonymity)(
+anonymity+=(((again*(1+(goals4*0.25)))*prespwr)*chargeanonymity)
 if (bestanonymity<(((again*(1+(goals4*0.25)))*prespwr)*chargeanonymity)){
 bestanonymity=(((again*(1+(goals4*0.25)))*prespwr)*chargeanonymity)
 }
