--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -2208,23 +2208,23 @@ function updateLevelandAuto(){
     if (challenge==2){
     pressesdec=0
     } else if (challenge==3 || challenge==4){
-    pressesdec+=((((((cursor*0.1)*0.01)+((mother*1)*0.01)+((goals1*(ppower))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*(mxpmul*0.001))*chargepress)
+    pressesdec+=((((((cursor*0.1)*0.01)+((mother*1)*0.01)+((goals1*(ppower))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*((mxpmul/chargexp)*0.001))*chargepress)
     } else {
-    pressesdec+=((((((((cursor*0.1)*0.01)*(cpower))+(((mother*1)*0.01)*(mpower)))+((goals1*(ppress*ppower))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*(mxpmul*0.001))*chargepress)
+    pressesdec+=((((((((cursor*0.1)*0.01)*(cpower))+(((mother*1)*0.01)*(mpower)))+((goals1*(ppress*ppower))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*((mxpmul/chargexp)*0.001))*chargepress)
     }
     if (challenge==2){
     pps=0
     } else if (challenge==3 || challenge==4){
-    pps=parseInt(((((((cursor*0.1)+(mother*1)+(goals1*(ppower)))*(goals2+1)*(Math.pow(2, goals6)))*(mxpmul*0.001))*chargepress).toFixed(1)))
+    pps=parseInt(((((((cursor*0.1)+(mother*1)+(goals1*(ppower)))*(goals2+1)*(Math.pow(2, goals6)))*((mxpmul/chargexp)*0.001))*chargepress).toFixed(1)))
     } else {
-    pps=parseInt(((((((((cursor*0.1)*(cpower))+((mother*1))*(mpower))+(goals1*(ppress*ppower)))*(goals2+1)*(Math.pow(2, goals6)))*(mxpmul*0.001))*chargepress).toFixed(1)))
+    pps=parseInt(((((((((cursor*0.1)*(cpower))+((mother*1))*(mpower))+(goals1*(ppress*ppower)))*(goals2+1)*(Math.pow(2, goals6)))*((mxpmul/chargexp)*0.001))*chargepress).toFixed(1)))
     }
     } else {
     pps=-1
     }
     } else if (dimension==1){
-    pressesdec+=((((((goals1*(antistrength))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*(axpmul*0.001))*chargepress)
-    antipps=parseInt(((((((goals1*(antistrength)))*(goals2+1)*(Math.pow(2, goals6)))*(axpmul*0.001))*chargepress).toFixed(1)))
+    pressesdec+=((((((goals1*(antistrength))*0.01))*(goals2+1)*(Math.pow(2, goals6)))*((axpmul/chargexp)*0.001))*chargepress)
+    antipps=parseInt(((((((goals1*(antistrength)))*(goals2+1)*(Math.pow(2, goals6)))*((axpmul/chargexp)*0.001))*chargepress).toFixed(1)))
     }
     if (pressesdec>=1 && pressesdec<11){
     pressesdec-=1
@@ -2235,7 +2235,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=1
         totalantipresses+=1
-        axppts+=(0.001*((goals3+1)*axpmul))
+        axppts+=(0.001*axpmul)
     }
     } else if (pressesdec>=11 && pressesdec<111){
     pressesdec-=11
@@ -2246,7 +2246,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=11
         totalantipresses+=11
-        axppts+=(0.01*(goals3+1))
+        axppts+=(0.01*axpmul)
     }
     } else if (pressesdec>=111 && pressesdec<1111){
     pressesdec-=111
@@ -2257,7 +2257,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=111
         totalantipresses+=111
-        axppts+=(0.1*((goals3)+1))
+        axppts+=(0.1*axpmul)
     }
     } else if (pressesdec>=1111 && pressesdec<11111){
     pressesdec-=1111
@@ -2268,7 +2268,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=1111
         totalantipresses+=1111
-        axppts+=(1*(goals3+1))
+        axppts+=(1*axpmul)
     }
     } else if (pressesdec>=11111 && pressesdec<111111){
     pressesdec-=11111
@@ -2279,7 +2279,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=11111
         totalantipresses+=11111
-        axppts+=(11*(goals3+1))
+        axppts+=(11*axpmul)
     }
     } else if (pressesdec>=111111 && pressesdec<1111111){
     pressesdec-=111111
@@ -2290,7 +2290,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=111111
         totalantipresses+=111111
-        axppts+=(111*(goals3+1))
+        axppts+=(111*axpmul)
     }
     } else if (pressesdec>=1111111 && pressesdec<11111111){
     pressesdec-=1111111
@@ -2301,7 +2301,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=1111111
         totalantipresses+=1111111
-        axppts+=(1111*(goals3+1))
+        axppts+=(1111*axpmul)
     }
     } else if (pressesdec>=11111111 && pressesdec<111111111){
     pressesdec-=11111111
@@ -2312,7 +2312,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=11111111
         totalantipresses+=11111111
-        axppts+=(11111*(goals3+1))
+        axppts+=(11111*axpmul)
     }
     } else if (pressesdec>=111111111 && pressesdec<1111111111){
     pressesdec-=111111111
@@ -2323,7 +2323,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=111111111
         totalantipresses+=111111111
-        axppts+=(111111*(goals3+1))
+        axppts+=(111111*axpmul)
     }
     } else if (pressesdec>=1111111111 && pressesdec<11111111111){
     pressesdec-=1111111111
@@ -2334,7 +2334,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=1111111111
         totalantipresses+=1111111111
-        axppts+=(1111111*(goals3+1))
+        axppts+=(1111111*axpmul)
     }
     } else if (pressesdec>=11111111111 && pressesdec<111111111111){
     pressesdec-=11111111111
@@ -2345,7 +2345,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=11111111111
         totalantipresses+=11111111111
-        axppts+=(11111111*(goals3+1))
+        axppts+=(11111111*axpmul)
     }
     } else if (pressesdec>=111111111111 && pressesdec<1111111111111){
     pressesdec-=111111111111
@@ -2356,7 +2356,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=111111111111
         totalantipresses+=111111111111
-        axppts+=(111111111*(goals3+1))
+        axppts+=(111111111*axpmul)
     }
     } else if (pressesdec>=1111111111111 && pressesdec<11111111111111){
     pressesdec-=1111111111111
@@ -2367,7 +2367,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=1111111111111
         totalantipresses+=1111111111111
-        axppts+=(1111111111*(goals3+1))
+        axppts+=(1111111111*axpmul)
     }
     } else if (pressesdec>=11111111111111 && pressesdec<111111111111111){
     pressesdec-=11111111111111
@@ -2378,7 +2378,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=11111111111111
         totalantipresses+=11111111111111
-        axppts+=(11111111111*(goals3+1))
+        axppts+=(11111111111*axpmul)
     }
     } else if (pressesdec>=111111111111111 && pressesdec<1111111111111111){
     pressesdec-=111111111111111
@@ -2389,7 +2389,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=111111111111111
         totalantipresses+=111111111111111
-        axppts+=(111111111111*(goals3+1))
+        axppts+=(111111111111*axpmul)
     }
     } else if (pressesdec>=1111111111111111 && pressesdec<11111111111111111){
     pressesdec-=1111111111111111
@@ -2400,7 +2400,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=1111111111111111
         totalantipresses+=1111111111111111
-        axppts+=(1111111111111*(goals3+1))
+        axppts+=(1111111111111*axpmul)
     }
     } else if (pressesdec>=11111111111111111 && pressesdec<111111111111111111){
     pressesdec-=11111111111111111
@@ -2411,7 +2411,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=11111111111111111
         totalantipresses+=11111111111111111
-        axppts+=(11111111111111*(goals3+1))
+        axppts+=(11111111111111*axpmul)
     }
     } else if (pressesdec>=111111111111111111 && pressesdec<1111111111111111111){
     pressesdec-=111111111111111111
@@ -2422,7 +2422,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=111111111111111111
         totalantipresses+=111111111111111111
-        axppts+=(111111111111111*(goals3+1))
+        axppts+=(111111111111111*axpmul)
     }
     } else if (pressesdec>=1111111111111111111 && pressesdec<11111111111111111111){
     pressesdec-=1111111111111111111
@@ -2433,7 +2433,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=1111111111111111111
         totalantipresses+=1111111111111111111
-        axppts+=(1111111111111111*(goals3+1))
+        axppts+=(1111111111111111*axpmul)
     } else if (pressesdec>=11111111111111111111 && pressesdec<111111111111111111111){
     pressesdec-=11111111111111111111
     if (dimension==0){
@@ -2443,7 +2443,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=11111111111111111111
         totalantipresses+=11111111111111111111
-        axppts+=(11111111111111111*(goals3+1))
+        axppts+=(11111111111111111*axpmul)
     }
     } else if (pressesdec>=111111111111111111111 && pressesdec<1111111111111111111111){
     pressesdec-=111111111111111111111
@@ -2454,7 +2454,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=111111111111111111111
         totalantipresses+=111111111111111111111
-        axppts+=(111111111111111111*(goals3+1))
+        axppts+=(111111111111111111*axpmul)
     }
     } else if (pressesdec>=1111111111111111111111 && pressesdec<11111111111111111111111){
     pressesdec-=1111111111111111111111
@@ -2465,7 +2465,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=1111111111111111111111
         totalantipresses+=1111111111111111111111
-        axppts+=(1111111111111111111*(goals3+1))
+        axppts+=(1111111111111111111*axpmul)
     }
     } else if (pressesdec>=11111111111111111111111 && pressesdec<111111111111111111111111){
     pressesdec-=11111111111111111111111
@@ -2476,7 +2476,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=11111111111111111111111
         totalantipresses+=11111111111111111111111
-        axppts+=(11111111111111111111*(goals3+1))
+        axppts+=(11111111111111111111*axpmul)
     }
     } else if (pressesdec>=111111111111111111111111 && pressesdec<1111111111111111111111111){
     pressesdec-=111111111111111111111111
@@ -2487,7 +2487,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=111111111111111111111111
         totalantipresses+=111111111111111111111111
-        axppts+=(111111111111111111111*(goals3+1))
+        axppts+=(111111111111111111111*axpmul)
     }
     } else if (pressesdec>=1111111111111111111111111 && pressesdec<11111111111111111111111111){
     pressesdec-=1111111111111111111111111
@@ -2498,7 +2498,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=1111111111111111111111111
         totalantipresses+=1111111111111111111111111
-        axppts+=(1111111111111111111111*(goals3+1))
+        axppts+=(1111111111111111111111*axpmul)
     }
     } else if (pressesdec>=11111111111111111111111111){
     pressesdec-=11111111111111111111111111
@@ -2509,7 +2509,7 @@ function updateLevelandAuto(){
     } else if (dimension==1){
         antipresses+=1111111111111111111111111
         totalantipresses+=1111111111111111111111111
-        axppts+=(1111111111111111111111*(goals3+1))
+        axppts+=(1111111111111111111111*axpmul)
     }
     }
     }
