--- a/404.html
+++ b/404.html
@@ -1,8 +1,10 @@
 <head>
 <title>404'd haha</title>
 </head>
-<body>
-<div style="position: absolute; top: 10px; left: 10px; font-size: 25px; ">get 404'd lol</div>
-<div style="position: absolute; top: 40px; left: 10px; ">don't worry everything is fine</div><div style="position: absolute; top: 60px; left: 13px;">just choose one from below</div>
-<div style="position: absolute; top: 85px; left: 40px;"><button onclick="history.back()" style="position: relative; left: -5px;">back</button> <button onclick="location.href = 'rdgfb.github.io';" style="position: relative; left: 15px;">home</button></div>
+<body style="background-color: #000000">
+<div style="position: absolute;height: 126px;width: 204px;top: calc(50% - 63px);left: calc(50% - 102px); border-color: #000000; background-color: #FFFFFF; border-style: double;">
+<div style="position: absolute;top: 3px;left: 34px;font-size: 25px;">get 404'd lol</div>
+<div style="position: absolute;top: 42px;left: 10px;">don't worry everything is fine</div><div style="position: absolute;top: 63px;left: 13px;">just choose one from below</div>
+<div style="position: absolute;top: 93px;left: 45px;"><button onclick="history.back()" style="position: relative; left: -5px;">back</button> <button onclick="location.href = 'rdgfb.github.io';" style="position: relative; left: 15px;">home</button></div>
+</div>
 </body>
