--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -3202,9 +3202,9 @@ function updatePressing(){
         } else if (antipresses>=0 && antipresses<1000) {
             document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1)))%1000).toFixed(2))+" anti-presses";
         } else if (antipresses>=1000 && antipresses<1000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000)))/1000).toFixed(0))+","+(((Math.round(Math.trunc(antipresses/100)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/10)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/1)))%10).toFixed(0))+" anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1)))/1000).toFixed(0))+","+(((Math.round(Math.trunc(antipresses/100)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/10)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/1)))%10).toFixed(0))+" anti-presses";
         } else if (antipresses>=1000000 && antipresses<1000000000) {
-            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000)))/1000).toFixed(0))+","+(((Math.round(Math.trunc(antipresses/100000)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/10000)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/1000)))%10).toFixed(0))+","+(((Math.round(Math.trunc(antipresses/100)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/10)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/1)))%10).toFixed(0))+" anti-presses";
+            document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000)))/1000).toFixed(0))+","+(((Math.round(Math.trunc(antipresses/100000)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/10000)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/1000)))%10).toFixed(0))+","+(((Math.round(Math.trunc(antipresses/100)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/10)))%10).toFixed(0))+""+(((Math.round(Math.trunc(antipresses/1)))%10).toFixed(0))+" anti-presses";
         } else if (antipresses>=1000000000 && antipresses<1000000000000) {
             document.getElementById("first").innerText=(((Math.round(Math.trunc(antipresses/1000000)))/1000).toFixed(3))+"B anti-presses";
         } else if (antipresses>=1000000000000 && antipresses<1000000000000000) {
